# video_eater

./: .env.sample  README.md  __main__.py  pyproject.toml
helpers/: ai_yt_transcript_processor.py  cache_stuff.py  yt_models.py  yt_prompts.py
helpers/ai_processors/: base_processor.py  openai_transcript_cleaner.py  outline_generator.py  theme_synthesizer.py  youtube_transcript_cleaner.py
video_eater/: __init__.py  __main__.py  process_playlist.py
video_eater/core/: config_models.py  output_templates.py  pipeline.py
video_eater/core/ai_processors/: ai_prompt_models.py  base_processor.py  fuzz_matching_helpers.py  openai_processor.py  outline_generator.py  transcript_processor.py  youtube_description_generator.py  youtube_transcript_cleaner.py
video_eater/core/handle_video/: audio_extractor.py  youtube_getter.py
video_eater/core/transcribe_audio/: extract_audio_chunks.py  extract_audio_chunks_parallel.py  local_whisper_audio_transcription.py  transcribe_audio_assembly_ai.py  transcribe_audio_chunks.py  transcript_models.py  whisper_audio_transcription.py
video_eater/logging_configuration/: configure_logging.py  logger_builder.py  pipeline_logger.py
video_eater/logging_configuration/handlers/: websocket_log_queue_handler.py
video_eater/old/: ai_yt_transcript_processor.py  transcript_models.py  youtube_playlist_extractor.py
