[project]
name = "video_eater"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "assemblyai>=0.43.1",
    "av>=15.0.0",
    "click>=8.2.1",
    "matplotlib>=3.10.5",
    "openai-whisper>=20250625",
    "openai>=1.99.7",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "torch>=2.8.0",
    "yt-dlp>=2025.8.27",
]
